--- a/.env.local.tmplate
+++ b/.env.local.tmplate
@@ -1,3 +1,5 @@
 GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID_KEY"
 GITHUB_CLIENT_SECRETS="YOUR_GITHUB_CLIENT_SECRETS_KEY"
+NAVER_CLIENT_ID="YOUR_NAVER_CLIENT_ID_KEY"
+NAVER_CLIENT_SECRETS="YOUR_NAVER_CLIENT_SECRETS_KEY"
 
