google 저장 포인트

--- a/.env.local.tmplate
+++ b/.env.local.tmplate
@@ -2,4 +2,7 @@ GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID_KEY"
 GITHUB_CLIENT_SECRETS="YOUR_GITHUB_CLIENT_SECRETS_KEY"
 NAVER_CLIENT_ID="YOUR_NAVER_CLIENT_ID_KEY"
 NAVER_CLIENT_SECRETS="YOUR_NAVER_CLIENT_SECRETS_KEY"
+GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID_KEY"
+GOOGLE_CLIENT_SECRETS="YOUR_GOOGLE_CLIENT_SECRETS_KEY"
+
 
